fix margin/padding on smaller screen size

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,10 @@ span.bold {
     gap: 1em;
   }
 
+  .content button {
+    padding-bottom: 0.5em;
+  }
+
   .img-wrapper {
     max-width: 200px;
   }
