--- a/src/components/Crew/Crew.css
+++ b/src/components/Crew/Crew.css
@@ -109,7 +109,7 @@
 
 @media only screen and (max-width: 400px) {
   .crew .content h2 {
-    font-size: 2em;
+    font-size: 1.5em;
   }
   .crew .content h3 {
     font-size: 1.2em;
